<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.coredeux</groupId>
    <artifactId>coredeux-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Coredeux Parent</name>
    <description>Enterprise Java framework suite for rapidly building cloud-native, multi-tenant, agentic AI and LLM-driven platforms</description>
    <url>https://github.com/coredeux/coredeux</url>

    <properties>
        <java.version>17</java.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>
        <lombok.version>1.18.46</lombok.version>
        <byte-buddy.version>1.17.8</byte-buddy.version>
        <jacoco.version>0.8.14</jacoco.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <jakarta.persistence.version>3.1.0</jakarta.persistence.version>
        <hibernate.version>6.4.4.Final</hibernate.version>
        <h2.version>2.2.224</h2.version>
        <jackson.version>2.17.0</jackson.version>
        <poi.version>5.2.5</poi.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <sonar.organization>coredeux</sonar.organization>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy-agent</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>${jakarta.persistence.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
		<module>modules/coredeux-core</module>
		<module>modules/coredeux-core-jpa</module>
		<module>modules/coredeux-import</module>
		<module>modules/coredeux-export</module>
		<module>modules/coredeux-core-jdbc</module>
		<module>modules/coredeux-core-elasticsearch</module>
		<module>modules/coredeux-core-mongodb</module>
		<module>modules/coredeux-core-redis</module>
		<module>modules/spring-boot-starters</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.17.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    <distributionManagement>
	    <snapshotRepository>
	        <id>central</id>
	        <url>https://central.sonatype.com/repository/maven-snapshots/</url>
	    </snapshotRepository>
    </distributionManagement>

</project>
